<resources>
    <string name="app_name">GROUPpROJECT</string>
    <string name="email">email address</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="dont_have_account_signup">signup</string>
    <string name="want_to_login">login?</string>
    <string name="leaves">LEAVES</string>
    <string name="apply">APPLY</string>
    <string name="leave_balance">Leave Balance</string>
    <string name="leave_status">Leave Status</string>
    <string name="leave_status2">LEAVE STATUS</string>
    <string name="leave_holyday">Leave Holyday</string>
    <string name="user_name">User Name</string>
    <string name="occupation">Occupation</string>
    <string name="company_name">Company Name</string>
    <string name="basic_information"><![CDATA[Basic information >]]></string>
    <string name="see_employees_details">See employees details</string>
    <string name="allocation_duty"><![CDATA[Allocation duty >]]></string>
    <string name="see_details_here">see details here</string>
    <string name="dependents"><![CDATA[Dependents >]]></string>
    <string name="register_delete_employee_here">Register / delete employee here</string>
    <string name="manage_employee"><![CDATA[Manage employee >]]></string>
    <string name="promote_change_employee_here">Promote / Change employee here</string>
    <string name="policydocument">Policy Document</string>
    <string name="atachment">Atachment</string>
    <string name="date_upload">Date Upload</string>
    <string name="it_and_assets_policy">IT and Assets policy</string>
    <string name="reimbersement_policy">Reimbersement policy</string>
    <string name="performance_and_goals">Performance And Goals</string>
    <string name="competiton_and_benefits">Competiton and Benefits</string>
    <string name="prevention_of_sexual_harassment">Prevention of sexual Harassment</string>
    <string name="attandance_and_time_off">Attandance and time off</string>
    <string name="signup">signup</string>
    <string name="fullnames">FullNames</string>
    <string name="department">Department</string>
    <string name="education_leval">Education Leval</string>
    <string name="nationality">Nationality</string>
    <string name="register_employee">REGISTER EMPLOYEES</string>
    <string name="start_date">Start Date</string>
    <string name="register">REGISTER</string>
    <string name="department_title">DEPARTMENT</string>
    <string name="_1_it">1. IT</string>
    <string name="_2_finance">2. Finance</string>
    <string name="_3_marketing">3. Marketing</string>
    <string name="_4_r_amp_d"><![CDATA[4. R&D]]></string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="employee_names">Employee names</string>
    <string name="total_leave_holiday">Total Leave Holiday</string>
    <string name="contacts">Contacts</string>
    <string name="job_title">Job Title</string>
    <string name="age">Age</string>
    <string name="used_leave_holiday">Used Leave</string>
    <string name="others">Others</string>
    <string name="submit">SUBMIT</string>
    <string name="leave_holidays">LEAVE HOLIDAYS</string>
    <string name="termination_date">Termination Date</string>
    <string name="terminate">TERMINATE</string>
    <string name="termination">TERMINATION</string>
    <string name="termination2">Termination</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="duties">Duties</string>
    <string name="search">Search</string>
    <string name="promotion">Promotion</string>
    <string name="leave_holydays">Leave Holydays</string>
    <string name="departments">Departments</string>
    <string name="register_employees">Register Employees</string>
    <string name="info">INFO</string>
    <string name="share">share</string>
</resources>