<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="@color/white">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/UserNametxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"

        android:orientation="vertical">


        <TextView
            android:id="@+id/BasicInfotxt"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:text="@string/basic_information"
            android:textColor="@color/purple_700"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0.5"
            android:layout_marginStart="30dp"
            android:text="@string/see_employees_details"
            android:textColor="@color/black"
            android:textSize="20sp"/>


        <TextView
            android:id="@+id/AllocationInfotxt"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:text="@string/allocation_duty"
            android:textColor="@color/purple_700"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0.5"
            android:layout_marginStart="30dp"
            android:text="@string/see_details_here"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/DependentsInfotxt"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:text="@string/dependents"
            android:textColor="@color/purple_700"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0.5"
            android:layout_marginStart="30dp"
            android:text="@string/register_delete_employee_here"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/ManageEMPInfotxt"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0.5"
            android:layout_marginStart="10dp"
            android:text="@string/manage_employee"
            android:textColor="@color/purple_700"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="0.5"
            android:layout_marginStart="30dp"
            android:text="@string/promote_change_employee_here"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/HomeIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:isScrollContainer="false"
            android:background="@color/primaryApp"
            android:src="@drawable/ic_baseline_home_24"/>

        <ImageView
            android:id="@+id/ProfileIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_profile_24"/>

        <ImageView
            android:id="@+id/LeavesIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_leaves_24"/>

        <ImageView
            android:id="@+id/DepatrmentIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_department_24"/>
        <ImageView
            android:id="@+id/PoliciesIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_conversation_24"/>

        <ImageView
            android:id="@+id/LogoutIv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_logout_24"/>

    </LinearLayout>


</RelativeLayout>