<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Promotion"
    android:background="@drawable/image3">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/TerminationTitle"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/termination"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/PFullnamestxt"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/fullnames"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/TitlePromotiontxt"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/title"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Departmenttxt"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:hint="@string/department"
                android:textColor="@color/black"
                android:textColorHint="@android:color/background_dark" />

        </LinearLayout>

        <Button
            android:id="@+id/PSaveview"
            android:text="@string/save"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:textColor="@color/black" />


    </LinearLayout>

</RelativeLayout>