<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Leaves"
    android:background="@drawable/image3">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Leaveto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/primaryApp"
            android:text="@string/leaves"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/Applyto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/whitetintedApp"
            android:text="@string/apply"
            android:textColor="@android:color/black" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/LeaveBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/primaryApp"
            android:text="@string/leave_balance"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/LeaveStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/whitetintedApp"
            android:text="@string/leave_status"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/LeaveHolyday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/primaryApp"
            android:text="@string/leave_holyday"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/HomeIvl"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:isScrollContainer="false"
            android:src="@drawable/ic_baseline_home_24"/>

        <ImageView
            android:id="@+id/ProfileIvl"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_profile_24"/>

        <ImageView
            android:id="@+id/LeavesIvl"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:background="@color/primaryApp"
            android:src="@drawable/ic_baseline_leaves_24"/>

        <ImageView
            android:id="@+id/ConversationIvl"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:src="@drawable/ic_baseline_conversation_24"/>

    </LinearLayout>



</RelativeLayout>